--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,218 @@
+/* styles.css */
 body {
+  font-family: 'Arial', sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 24px;
+  width: 100%;
+  height: 55px;
+  opacity: 1;
+  padding-left: 30px;
+  color: #ffffff;
+  background-color: rgb(27, 50, 82);
+  border-bottom: 0px solid rgb(229, 231, 235);
+  box-shadow: rgba(3, 3, 3, 0.1) 2px 2px 4px;
+}
+
+/* Media query for mobile devices */
+@media (max-width: 768px) {
+  .header-title {
+    justify-content: center;
+    padding-left: 0;
+  }
+}
+
+header h1 {
+  font-size: 3rem;
+  margin: 0;
+}
+
+.search-tool {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-right: 20px;
+}
+
+@media (max-width: 768px) {
+  .search-tool {
+    flex-direction: column;
+    margin-left: 14px;
+  }
+}
+
+.filter {
+  margin: 20px;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .filter {
+    display: flex;
+    width: 95%;
+    flex-direction: column;
+    margin-left: 10px;
+  }
+}
+
+.filter select {
+  padding: 10px;
+  margin: 10px;
+  font-size: 1rem;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  color: #ffffff;
+  background-color: rgb(27, 50, 82);
+}
+@media (max-width: 768px) {
+  .filter select {
+    padding: 10px;
+    margin: 10px;
+    font-size: 1rem;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+    color: #000000;
+    background-color: rgb(224, 217, 207);
+  }
+}
+
+.search-bar {
+  margin: 18px;
+  padding: 10px;
+  width: 40%;
+  height: 21px;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  color: #ffffff;
+  background-color: rgb(27, 50, 82);
+}
+@media (max-width: 768px) {
+  .search-bar {
+    width: 85%;
+    color: #000000;
+    background-color: white;
+  }
+
+  .search-bar::placeholder {
+    color: #000000;
+  }
+}
+.search-bar::placeholder {
+  color: #ffffff;
+}
+@media (max-width: 768px) {
+
+  .search-bar::placeholder {
+    color: #000000;
+  }
+}
+
+.retreat-list {
+  display: flex;
+  flex-wrap: nowrap;
+  margin: 20px;
+}
+
+@media (max-width: 768px) {
+  .retreat-list {
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 20px;
+  }
+}
+
+.retreat-card {
+  background-color: rgb(224, 217, 207);
+  border: 1px solid #eee;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 20px;
+  width: 513px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+}
+
+.retreat-card:hover {
+  transform: scale(1.05);
+}
+
+.retreat-card img {
+  height: 150px;
+  width: 200px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  box-shadow: rgba(0, 0, 0, 0.08) 0px 0px 0px;
+  border-radius: 16px;
+  border: 0px solid rgb(229, 231, 235);
+}
+
+.retreat-card h2 {
+  font-size: 1.5rem;
+  margin: 10px 0;
+}
+
+.retreat-card p {
+  margin: 5px 0;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.pagination button {
+  margin: 0 5px 80px 0;
+  padding: 10px 20px;
+  border: none;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+}
+@media (max-width: 768px) {
+  .pagination button {
+    margin: 0 5px 80px 0;
+    padding: 10px 20px;
+    border: none;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    border-radius: 50px;
+  }
+}
+
+.pagination button:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
+.pagination button.active {
+  background-color: #0056b3;
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 52px;
+  opacity: 1;
+  background-color: rgb(255, 255, 255);
+  border-top: 0px solid rgb(229, 231, 235);
+  box-shadow: rgba(3, 3, 3, 0.1) 2px 2px 4px;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
 }
